--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,15 @@
-libitpp (4.0.0.rc2-1) UNRELEASED; urgency=low
+libitpp (4.0.0-1) unstable; urgency=low
 
   * New upstream release.
   * debian/control:
     + Add Homepage field.
   * debian/rules:
     + Ensure the right CXXFLAGS are specified while running configure.
-  
- -- Kumar Appaiah <akumar@ee.iitm.ac.in>  Mon, 08 Oct 2007 13:33:15 +0530
+    + Work around removal of itpp-config.1 and itpp.spec by upstream distclean.
+  * Update documentation install directory due to usage of --docdir in
+    configure.
+
+ -- Kumar Appaiah <akumar@ee.iitm.ac.in>  Mon, 15 Oct 2007 11:35:03 +0530
 
 libitpp (3.99.3.1-2) unstable; urgency=low
 
