--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libitpp (4.0.0-2) unstable; urgency=low
+
+  * Add debian/patches/01_dontremove_files to prevent removal of
+    itpp-config.1 and itpp.spec.
+
+ -- Kumar Appaiah <akumar@ee.iitm.ac.in>  Mon, 15 Oct 2007 16:17:27 +0530
+
 libitpp (4.0.0-1) unstable; urgency=low
 
   * New upstream release.
