--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+libitpp (4.0.0-5) UNRELEASED; urgency=low
+
+  * Revert to old control file.
+  * Add Vcs-Git and Vcs-Browser.
+  
+ -- Kumar Appaiah <akumar@ee.iitm.ac.in>  Tue, 30 Oct 2007 15:10:22 +0530
+
+libitpp (4.0.0-4) experimental; urgency=low
+
+  * Package for experimental for gfortran transition.
+  * debian/control:
+    + Build-Depend on the gfortran lapack, refblas
+    + Change the binary package name to libitpp6gf.
+
+ -- Kumar Appaiah <akumar@ee.iitm.ac.in>  Tue, 30 Oct 2007 13:15:34 +0530
+
 libitpp (4.0.0-3) unstable; urgency=low
 
   * Fix watch file to handle upstream's "rc" naming.
