--- a/INSTALL
+++ b/INSTALL
@@ -195,6 +195,24 @@ Please refer to the documentation of your external libraries, to find out
 what are the correct library names and paths on your architecture, operating
 system, etc.
 
+Since 4.0.3 release, the configure script provides a new `--with-zdotu=
+<method>' option. It can be used to force the default calling convention of
+BLAS zdotu_ Fortran function. The BLAS libraries built with g77 compiler do
+not return the complex result of a function, but pass it via the first
+argument of the function. By using `--with-zdotu=void' option, this approach
+can be forced (g77 compatible). On the other hand, the libraries built with
+a newer gfortran compiler return the complex result like a normal function
+does, but calling such interface from C++ is not portable, due to
+incompatibilities between C++ complex<double> and Fortran's COMPLEX.
+Therefore in such case a Fortran wrapper function `zdotusub_' can be used
+(`--with-zdotu=zdotusub'), however it requires a working Fortran compiler.
+By default, IT++ tries to guess the proper method based on the detected BLAS
+implementation. For instance, the BLAS library provided by Intel MKL works
+fine with the `void' method. Eventually, if no Fortran compiler is available
+and the `void' method can not be used, the `zdotu_' BLAS function is not
+used at all and a relevant warning message is displayed during the
+configuration step.
+
 Although it is not recommended, you can intentionally prevent detection of
 some external libraries. To do this you should use `--without-<LIBNAME>' or
 `--with-<LIBNAME>=no', e.g.:
@@ -229,15 +247,15 @@ Configuration Status
 --------------------
 
 When the configuration process is finished, a status message is displayed.
-For instance, after having invoked the following configuration command on a
-recent Gentoo Linux system:
+For instance, after having invoked the following configuration command
 
   % ./configure --with-blas="-lblas"
 
-one can observe something like this:
+on a recent Gentoo Linux system with blas-atlas, lapack-atlas and fftw
+packages installed, one can observe something like this:
 
 ------------------------------------------------------------------------------
-itpp-4.0.1 library configuration:
+itpp-4.0.3 library configuration:
 ------------------------------------------------------------------------------
 
 Directories:
@@ -255,6 +273,7 @@ Switches:
   - shared ......... : yes
   - static ......... : no
   - explicit deps .. : no
+  - zdotu .......... : zdotusub
 
 Documentation tools:
   - doxygen ........ : yes
@@ -294,7 +313,7 @@ Compiler/linker flags/libs/defs:
   - LIBS ........... : -lfftw3 -llapack -lblas
 
 ------------------------------------------------------------------------------
-Now type 'make && make install' to build and install itpp-4.0.1 library
+Now type 'make && make install' to build and install itpp-4.0.3 library
 ------------------------------------------------------------------------------
 
 
