Add sh4 CPU support
Use Nobuhiro Iwamatsu's patch 02_sh4_support.diff to support building
on Renesas SH(sh4) CPUs. (Closes: #554380)

Signed-off-by: Kumar Appaiah <akumar@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libitpp (4.0.6-4) unstable; urgency=low
+
+  * Use Nobuhiro Iwamatsu's patch 02_sh4_support.diff to support building
+    on Renesas SH(sh4) CPUs. (Closes: #554380)
+
+ -- Kumar Appaiah <akumar@debian.org>  Wed, 04 Nov 2009 21:46:41 -0600
+
 libitpp (4.0.6-3) unstable; urgency=low
 
   * Fix for building with gcc 4.4.
