--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ libitpp (4.0.6-4) unstable; urgency=low
     on Renesas SH(sh4) CPUs. (Closes: #554380)
   * Standards Version is now 3.8.3 (No changes needed).
   * Patch system documentation (README.source) added.
+  * debian/source/format: Use 3.0 (quilt)
 
  -- Kumar Appaiah <akumar@debian.org>  Wed, 04 Nov 2009 21:46:41 -0600
 
