--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libitpp (4.0.6-5) unstable; urgency=low
+
+  * debian/watch: Update for new home page.
+
+ -- Kumar Appaiah <akumar@debian.org>  Wed, 20 Jan 2010 15:45:50 -0600
+
 libitpp (4.0.6-4) unstable; urgency=low
 
   * Use Nobuhiro Iwamatsu's patch 02_sh4_support.diff to support building
