--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 libitpp (4.0.7-2) UNRELEASED; urgency=low
 
   * Move dwww to suggests. (Closes: #570598).
+  * Install Octave/Matlab file loading programs into /usr/share/itpp.
+  * Standards version is now 3.9.1 (no changes needed)
 
- -- Kumar Appaiah <akumar@debian.org>  Fri, 19 Feb 2010 20:27:09 -0600
+ -- Kumar Appaiah <akumar@debian.org>  Mon, 13 Sep 2010 17:47:57 -0500
 
 libitpp (4.0.7-1) unstable; urgency=low
 
