--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libitpp (4.2-2) unstable; urgency=low
+
+  * Upload to unstable
+
+ -- Kumar Appaiah <akumar@debian.org>  Tue, 15 Feb 2011 22:37:22 -0600
+
 libitpp (4.2-1) experimental; urgency=low
 
   * New upstream release.
