--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libitpp (4.2-3) unstable; urgency=low
+
+  * Avoid installing libitpp.la (Closes: #621673)
+
+ -- Kumar Appaiah <akumar@debian.org>  Thu, 07 Apr 2011 19:01:38 -0500
+
 libitpp (4.2-2) unstable; urgency=low
 
   * Upload to unstable
