--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libitpp (4.2-4) unstable; urgency=low
+
+  * Build-Depend on doxygen-latex instead of texlive-*. (Closes: #616256)
+
+ -- Kumar Appaiah <akumar@debian.org>  Sat, 09 Jul 2011 09:39:03 -0500
+
 libitpp (4.2-3) unstable; urgency=low
 
   * Avoid installing libitpp.la (Closes: #621673)
