--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ libitpp (4.2-4) unstable; urgency=low
 
   * Build-Depend on doxygen-latex instead of texlive-*. (Closes: #616256)
   * Standards version is now 3.9.2 (no changes needed)
+  * Update build rule to comply with lintian recommendations (provide
+    build-arch and build-indep)
 
- -- Kumar Appaiah <akumar@debian.org>  Sat, 09 Jul 2011 09:41:35 -0500
+ -- Kumar Appaiah <akumar@debian.org>  Sat, 09 Jul 2011 09:42:32 -0500
 
 libitpp (4.2-3) unstable; urgency=low
 
