--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libitpp (4.2-5) unstable; urgency=low
+
+  * Remove extraneous doxygen build dependency.
+
+ -- Kumar Appaiah <akumar@debian.org>  Sat, 09 Jul 2011 23:14:17 -0500
+
 libitpp (4.2-4) unstable; urgency=low
 
   * Build-Depend on doxygen-latex instead of texlive-*. (Closes: #616256)
