--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libitpp (4.3.0-2) UNRELEASED; urgency=low
+
+  * Pass correct CXXFLAGS to cmake
+
+ -- Kumar Appaiah <akumar@debian.org>  Thu, 30 May 2013 08:36:27 -0400
+
 libitpp (4.3.0-1) unstable; urgency=low
 
   * New upstream release
