--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libitpp (4.3.0-3) UNRELEASED; urgency=low
+
+  * debian/watch:
+    + Add Bart Martens' updated watch file.
+
+ -- Kumar Appaiah <akumar@debian.org>  Mon, 03 Jun 2013 21:35:06 -0400
+
 libitpp (4.3.0-2) unstable; urgency=low
 
   * Pass correct CPPFLAGS and CXXFLAGS to cmake
