--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libitpp (4.3.0-3) UNRELEASED; urgency=low
+libitpp (4.3.0-3) unstable; urgency=low
 
   * debian/watch:
     + Add Bart Martens' updated watch file.
   * debian/patches:
-  + Add itpp-config-pc.diff to install pkg-config and
-    itpp-config files.
+    + Add itpp-config-pc.diff to install pkg-config and
+      itpp-config files. (Closes: #710818)
 
  -- Kumar Appaiah <akumar@debian.org>  Mon, 03 Jun 2013 21:35:06 -0400
 
