--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libitpp (4.3.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Kumar Appaiah <akumar@debian.org>  Tue, 09 Jul 2013 23:17:36 -0400
+
 libitpp (4.3.0-3) unstable; urgency=low
 
   * debian/watch:
