--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libitpp (4.3.1-2) unstable; urgency=low
+
+  * Add a patch to use memmove instead of memcpy in multilateration
+    test. (Closes: #741814)
+  * Standards version is now 3.9.5 (no changes needed)
+
+ -- Kumar Appaiah <akumar@debian.org>  Sun, 16 Mar 2014 19:42:14 -0400
+
 libitpp (4.3.1-1) unstable; urgency=low
 
   * New upstream release
