--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libitpp (4.3.1-3) unstable; urgency=low
+
+  * Multiarch additions to debian/{control,rules}
+    + Move the library and pkgconfig files to the
+      DEB_HOST_MULTIARCH directory manually.
+    + Add Multi-Arch: same for the library
+  * Fix SCM URIs to canonical ones
+
+ -- Kumar Appaiah <akumar@debian.org>  Thu, 20 Mar 2014 23:48:56 -0400
+
 libitpp (4.3.1-2) unstable; urgency=low
 
   * Add a patch to use memmove instead of memcpy in multilateration
