Standards version is now 3.9.8 (no changes)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ libitpp (4.3.1-7) unstable; urgency=medium
 
   * Replace man timestamp by SOURCE_DATE_EPOCH to make the package
     build. Thanks to Eduard Sanou for the patch. (Closes: #795394)
+  * Standards version is now 3.9.8 (no changes)
 
  -- Kumar Appaiah <akumar@debian.org>  Tue, 02 Aug 2016 21:43:35 +0530
 
